@@ -96,3 +96,10 @@ set COPYRIGHT_DIR = /off_home/codine/copyright
 # which Sun Microsystems is releasing
 #
 set SUN_COPYRIGHT_DIR  = /off_home/codine/n1ge6-copyright
+
+#
+# for HP11.00 we don't have dynamic loading of shared libraries
+# build with berkeleydb
+if ( $BUILDARCH == HP11 ) then
+   set argv = ( $argv -spool-berkeleydb )
+endif
