@@ -38,5 +38,6 @@
  * libs/spool/sge_spooling_loader.c
  */
 #define MSG_SPOOL_ERRORCREATINGCONTEXT_S   _MESSAGE(211000, _("error creating a "SFQ" spooling context\n"))
+#define MSG_SPOOL_COMPILEDMETHODNECONFIGURED_SS   _MESSAGE(211001, _("Binaries were compiled with spooling method "SFQ", requested spooling method is "SFQ"\n"))
 
 #endif /* __MSG_SPOOLLIB_LOADER_H */
