@@ -76,6 +76,7 @@ init_framework(bdb_info *info)
 
    /* create spooling context */
    spooling_context = spool_create_dynamic_context(&answer_list, 
+                              bootstrap_get_spooling_method(),
                               bootstrap_get_spooling_lib(), 
                               bootstrap_get_spooling_params());
    answer_list_output(&answer_list);
