@@ -86,6 +86,7 @@ static int init_framework(void)
 
    /* create spooling context */
    spooling_context = spool_create_dynamic_context(&answer_list, 
+                              bootstrap_get_spooling_method(),
                               bootstrap_get_spooling_lib(), 
                               bootstrap_get_spooling_params());
    answer_list_output(&answer_list);
